tests/compile_fail/union.stderr
error: only structs are supported
 --> $DIR/union.rs:4:1
  |
4 | union Foo {
  | ^^^^^
